# git-clean

./: .gitignore  Cargo.nix  Cargo.toml  flake.nix
src/: branches.rs  cli.rs  commands.rs  lib.rs  options.rs
tests/: deletion.rs  local.rs  remote.rs  support.rs  utility.rs
